# CLBlast

./: .appveyor.yml  .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  clblast.pc.in  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: build_and_test.yml  lint.yml  release.yml
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
cmake/Modules/: FindCBLAS.cmake  FindCLTune.cmake  FindMKL.cmake  FindOpenCL.cmake  FindclBLAS.cmake  FindcuBLAS.cmake
doc/: api.md  benchmarking.md  bindings.md  clblast.md  details_conv.md  details_gemm.md  faq.md  glossary.md  installation.md  routines.md  testing.md  tuning.md
include/: clblast.h  clblast_blas.h  clblast_c.h  clblast_cuda.h  clblast_half.h  clblast_netlib_c.h  clblast_plugin.h
include/internal/: buffer_test.h  cache.h  clpp11.h  database.h  public_api.h  routine.h  tuning.h  utilities.h
include/internal/database/: copy.h  pad.h  padtranspose.h  transpose.h  xaxpy.h  xdot.h  xgemm.h  xgemv.h  xger.h
include/internal/routines/: common.h  xaxpy.h  xgemm.h  xhemm.h  xherk.h  xsymm.h  xsyrk.h  xtrmm.h
samples/: cache.c  daxpy_cuda.cpp  dgemv.c  dtrsm.cpp  haxpy.c  samax.c  sasum.c  sgemm.c  sgemm.cc  sgemm.cpp  sgemm_batched.cpp  sgemm_cuda.cpp  sgemm_netlib.c  tuning_api.cpp
scripts/benchmark/: benchmark.py  benchmark_all.py  plot.py  settings.py  utils.py
scripts/database/: database.db  database.py
scripts/database/database/: bests.py  clblast.py  db.py  defaults.py  io.py
scripts/generator/: datatype.py  generator.py  routine.py
scripts/generator/generator/: convert.py  cpp.py  datatype.py  doc.py  pyclblast.py  routine.py
scripts/graphs/: common.r  xaxpy.r  xgemm.r  xgemm_small.r  xsymm.r  xsyr2k.r  xsyrk.r  xtrmm.r
src/: api_common.cpp  buffer_test.hpp  cache.cc  cache.cpp  cache.hpp  clblast.cc  clblast.cpp  clblast_blas.cpp  clblast_c.cc  clblast_c.cpp  clblast_cuda.cpp  clblast_exceptions.cpp  clblast_exceptions.hpp  clblast_netlib_c.cpp  clblast_plugin.cpp  clpp11.hpp  cupp11.hpp  cxpp11_common.hpp  database.cc  kernel_preprocessor.cpp  kernel_preprocessor.hpp  msvc.hpp  routine.cc  routine.cpp  routine.hpp  utilities.cc  utilities.cpp  utilities.hpp
src/database/: apple_cpu_fallback.hpp  database.cpp  database.hpp  database_structure.hpp  device_mapping.hpp  kernel_selection.hpp
src/database/kernels/: copy.hpp  invert.hpp  pad.hpp  padtranspose.hpp  transpose.hpp  xaxpy.hpp  xdot.hpp  xgemm.hpp  xgemm_direct.hpp  xgemv.hpp  xgemv_fast.hpp  xgemv_fast_rot.hpp  xger.hpp  xtrsv.hpp
src/kernels/: common.opencl  copy.opencl  opencl_to_cuda.h  pad.opencl  padtranspose.opencl  transpose.opencl  xaxpy.opencl  xgemm.opencl  xgemv.opencl
src/kernels/level1/: level1.opencl  xamax.opencl  xasum.opencl  xaxpy.opencl  xcopy.opencl  xdot.opencl  xhad.opencl  xnrm2.opencl  xscal.opencl  xswap.opencl
src/kernels/level2/: level2.opencl  xgemv.opencl  xgemv_fast.opencl  xger.opencl  xher.opencl  xher2.opencl  xtrsv.opencl
src/kernels/level3/: convert_hermitian.opencl  convert_symmetric.opencl  convert_triangular.opencl  copy.opencl  copy_fast.opencl  copy_pad.opencl  invert_diagonal_blocks.opencl  invert_diagonal_blocks_part1.opencl  invert_diagonal_blocks_part2.opencl  level3.opencl  pad.opencl  transpose.opencl  transpose_fast.opencl  transpose_pad.opencl  xconvgemm.opencl  xgemm_batched.opencl  xgemm_direct.opencl  xgemm_direct_batched.opencl  xgemm_direct_part1.opencl  xgemm_direct_part2.opencl  xgemm_direct_part3.opencl  xgemm_part1.opencl  xgemm_part2.opencl  xgemm_part3.opencl  xgemm_part4.opencl
src/kernels/levelx/: col2im.opencl  im2col.opencl  xconvgemm_part1.opencl  xconvgemm_part2.opencl  xminmax.opencl
src/kernels/matrix_transforms/: gbgemt.opencl  transforms.opencl
src/pyclblast/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
src/pyclblast/pyclblast/: pyclblast.pyx
src/pyclblast/samples/: haxpy.py  override_parameters.py  saxpy.py  saxpybatched.py  sgemm.py  sgemv.py
src/pyclblast/src/: pyclblast.pyx
src/pyclblast/test/: test_pyclblast.py
src/routines/: common.cc  common.cpp  common.hpp  routines.hpp  xaxpy.cc  xgemm.cc  xgemv.cc  xhemm.cc  xher2k.cc  xherk.cc  xsymm.cc  xsyr2k.cc  xsyrk.cc  xtrmm.cc
src/routines/level1/: xamax.cc  xamax.cpp  xamax.hpp  xamin.cpp  xamin.hpp  xasum.cc  xasum.cpp  xasum.hpp  xaxpy.cc  xaxpy.cpp  xaxpy.hpp  xcopy.cc  xcopy.cpp  xcopy.hpp  xdot.cc  xdot.cpp  xdot.hpp  xdotc.cc  xdotc.cpp  xdotc.hpp  xdotu.cc  xdotu.cpp  xdotu.hpp  xmax.cpp  xmax.hpp  xmin.cpp  xmin.hpp  xnrm2.cc  xnrm2.cpp  xnrm2.hpp  xscal.cc  xscal.cpp  xscal.hpp  xsum.cpp  xsum.hpp  xswap.cc  xswap.cpp  xswap.hpp
src/routines/level2/: xgbmv.cc  xgbmv.cpp  xgbmv.hpp  xgemv.cc  xgemv.cpp  xgemv.hpp  xger.cc  xger.cpp  xger.hpp  xgerc.cc  xgerc.cpp  xgerc.hpp  xgeru.cc  xgeru.cpp  xgeru.hpp  xhbmv.cc  xhbmv.cpp  xhbmv.hpp  xhemv.cc  xhemv.cpp  (+48 more)
src/tuning/: configurations.cpp  configurations.hpp  copy.cc  copy_fast.cc  copy_pad.cc  pad.cc  padtranspose.cc  transpose.cc  transpose_fast.cc  transpose_pad.cc  tuning.cc  tuning.cpp  tuning.hpp  tuning_api.cpp  xaxpy.cc  xdot.cc  xgemm.cc  xgemv.cc  xger.cc
src/utilities/: android.hpp  backend.hpp  buffer_test.cpp  buffer_test.hpp  clblast_exceptions.cpp  clblast_exceptions.hpp  compile.cpp  compile.hpp  device_mapping.hpp  msvc.hpp  plugin.cpp  plugin.hpp  plugin_none.cpp  plugin_posix.cpp  timing.cpp  timing.hpp  utilities.cpp  utilities.hpp
test/: diagnostics.cpp  test_utilities.cpp  test_utilities.hpp  wrapper_cblas.h  wrapper_cblas.hpp  wrapper_clblas.h  wrapper_clblas.hpp  wrapper_cublas.hpp  wrapper_cuda.hpp
test/correctness/: testab.cc  testab.h  testabc.cc  testabc.h  testac.cc  testac.h  testaxy.cc  testaxy.h  testblas.cc  testblas.cpp  testblas.h  testblas.hpp  tester.cc  tester.cpp  tester.h  tester.hpp  testxy.cc  testxy.h
test/performance/: client.cc  client.cpp  client.h  client.hpp
test/routines/: common.hpp  xaxpy.h  xgemm.h  xgemv.h  xhemm.h  xsymm.h  xsyr2k.h  xsyrk.h
(+577 files in other folders)
